<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proposition"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_id_proposition"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:inputType="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lieu"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lieu"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_salle"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextText10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_numero_salle"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_recruteur"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nom_recruteur"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_create_entretien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_changes"
        android:layout_marginTop="16dp" />

</LinearLayout>